Removes uncesssary field
